--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-
-streamlit>=1.36.0
-numpy>=1.26.0
-pandas>=2.0.0
-opencv-python-headless>=4.8.0
-mediapipe>=0.10.14
-scikit-learn>=1.3.0
-joblib>=1.3.0
-requests>=2.31.0
+streamlit>=1.36,<2
+numpy>=1.26,<3
+pandas>=2.0,<3
+opencv-python-headless>=4.10,<5
+mediapipe==0.10.21 ; python_version < "3.13"
+scikit-learn>=1.4,<2
+joblib>=1.3,<2
+requests>=2.31,<3
